# smi_leds

./: CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  detect_rpi.py  libsmi_leds.c  libsmi_leds.h  main.c  module.c  rpi_dma_utils.c  rpi_pixleds.c  rpi_pixleds_lib.c  rpi_pixleds_lib.h  setup.py  test.py
.github/workflows/: publish.yml
examples/: example.c  example.py
include/: smi_leds.h
python/: libsmi_leds.c  libsmi_leds.h  module.c  setup.py
smi_led/: rpi_dma_utils.h  rpi_pixleds_lib.c
smi_leds/: rpi_dma_utils.c  rpi_dma_utils.h  rpi_pixleds.c  rpi_pixleds_lib.c
